# music

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  SETTINGS_PLAN.md  architecture-diagram.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  需求文档.md
.cargo/: config.toml
.claude/: settings.local.json
.claude/agents/: base.md
.codex/: PROJECT_RULES.md
.cursor/rules/: app.mdc  color.mdc  web-component.mdc
.github/workflows/: android.yaml  build.yaml  desktop.yaml
.kiro/specs/rust-leptos-project/: design.md  requirements.md  tasks.md
assets/fonts/: .gitkeep
assets/icons/: .gitkeep
crates/api-client/: Cargo.toml
crates/api-client/src/: client.rs
crates/audio-player/: Cargo.toml
crates/audio-player/src/: core.rs  events.rs  lib.rs  local_player.rs  manager.rs  metadata.rs  mpris.rs  position_tracker.rs  queue.rs  store.rs  streaming_player.rs
crates/audio-player/src/players/: base.rs  librespot.rs  mobile.rs  mod.rs  rodio.rs
crates/database/: Cargo.toml
crates/database/src/: cache.rs  database.rs  lib.rs  migrations.rs  test.rs
crates/file_scanner/: Cargo.toml
crates/file_scanner/src/: auto_scanner.rs  file_cache.rs  lib.rs  playlist_scanner.rs  scanner.rs  scanner_android.rs  song_scanner.rs  tests.rs  track_scanner.rs  utils.rs
crates/macros/: Cargo.toml
crates/macros/src/: command_macro.rs
crates/mpris/src/: mpris.rs  mpris_android.rs
crates/music-plugin-sdk/: Cargo.toml
crates/music-plugin-sdk/src/: lib.rs
crates/music-plugin-sdk/src/base/: manifest.rs  mod.rs
crates/music-plugin-sdk/src/core/: host.rs  mod.rs
crates/music-plugin-sdk/src/errors/: mod.rs
crates/music-plugin-sdk/src/traits/: base.rs  event.rs  media.rs  mod.rs
crates/music-plugin-sdk/src/types/: base.rs  media.rs  mod.rs
crates/music-plugin-sdk/src/utils/: builder.rs  ext.rs  macros.rs  mod.rs  validation.rs
crates/plugins/: Cargo.toml  SECURITY.md
crates/plugins/src/: lib.rs
crates/plugins/src/factory/: media.rs  mod.rs
crates/plugins/src/internal/: mod.rs  spotify.rs  youtube.rs
crates/plugins/src/internal/bilibili/: README.md  audio.rs  auth.rs  convert.rs  mod.rs  plugin.rs  test_api.rs  test_qr_login.rs  types.rs  wbi.rs
crates/plugins/src/system/: core.rs  external.rs  host.rs  lifecycle.rs  loader.rs  manager.rs  manifest.rs  mod.rs  registry.rs  sandbox.rs  secure_host.rs  security.rs  state.rs  types.rs
crates/plugins/test_plugins/b218a6c3-88ec-5c6c-be13-14723e14710b/: manifest.json
crates/plugins/test_plugins/e1e9756f-ad59-5232-8a09-25c173a56de5/: manifest.json
crates/plugins/test_plugins/fb405d92-4ff2-5317-a86a-cc3e8d91ec72/: manifest.json
crates/preferences/: Cargo.toml
crates/preferences/src/: preferences.rs
crates/providers/: Cargo.toml
crates/providers/src/: factory.rs  lib.rs  macros.rs  registry.rs  router.rs
crates/providers/src/provider/: base.rs  bilibili.rs  mod.rs  spotify.rs  youtube.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs  schema.json  settings.rs  test.rs
crates/shared-utils/src/: error.rs
crates/tauri-invoke-proc/src/: core.rs  ui.rs
crates/types/: Cargo.toml
crates/types/src/: cache.rs  cache_schema.rs  common.rs  entities.rs  errors.rs  lib.rs  preferences.rs  providers.rs  schema.rs  songs.rs  themes.rs
crates/types/src/settings/: general.rs  lyrics.rs  mod.rs  music.rs
crates/types/src/ui/: mod.rs  player_details.rs  track_details.rs
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
lib/tauri-plugin-audioplayer/: Cargo.toml
lib/tauri-plugin-file-scanner/: Cargo.toml  build.rs
lib/tauri-plugin-self-update/: Cargo.toml
locales/: en.json  zh.json
locales/app/: en-US.json  zh-CN.json
locales/common/: en-US.json  zh-CN.json
locales/settings/: en-US.json  zh-CN.json
other/styles/: layout-desktop.css  main.css  menu-desktop.css  tailwind-extend.css  tailwindcss.css  tokens.css
plugins/: vite-ast.ts
src/: App.tsx  i18n.ts  main.tsx  router.tsx  wdyr.ts
src-tauri/: Cargo.toml  function_details.json  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  migrated.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: decoder.rs  effects.rs  mod.rs  player.rs  player_commands.rs  player_events.rs  player_handle.rs  player_service.rs
src-tauri/src/commands/: mod.rs  player.rs
src-tauri/src/database/: cache.rs  local_library.rs  migration.rs  mod.rs  models.rs
src-tauri/src/music/: commands.rs  mod.rs
src-tauri/src/playback/: spotify.rs
src-tauri/src/plugins/: handler.rs  manager.rs  mod.rs
src-tauri/src/preference/: mod.rs
src-tauri/src/providers/: handler.rs  mod.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/sources/: bilibili.rs  kugou.rs  local.rs  mod.rs  netease.rs  qq_music.rs  traits.rs
src-tauri/src/state/: app_state.rs  library_state.rs  mod.rs  player_state.rs
src-tauri/src/themes/: mod.rs
src-tauri/src/utils/: metadata.rs  mod.rs
src/atoms/: gradient.ts  layout.ts  menu.ts  route.ts  search.ts
src/components/: mod.rs
src/constants/: drag.ts  hotkeys.ts  lyrics.ts  spring.ts
src/hooks/: mod.rs
src/initialize/: index.ts  settings-hydrate.ts
src/lib/: color.ts  data-structure.ts  dom.ts  event-bus.ts  gradient-generator.ts  gradient.ts  helper.ts  image.ts  log.ts  ns.ts  route-builder.ts  selector.tsx  svg.ts  tauri.ts  text.ts
src/pages/: mod.rs
src/providers/: layout-provider.tsx
src/services/: audio-service.ts  music-api.ts  plugin-service.ts  preferences.ts  scanner-service.ts  settings.ts  theme.ts
src/styles/: additional.css  animations.css  base.css  colors-media.css  components.css  global.css  main.css  scrollbar.css  tailwind-extend.css  tailwindcss.css  variables.css
src/types/: bindings.d.ts  electron.d.ts  entities.rs  global.d.ts  gradient.ts  index.ts  react-global.d.ts  svg.d.ts  tauri.d.ts  theme.ts  vite-env.d.ts
src/utils/: constants.rs
(+282 files in other folders)
