 [package]
name = "music"
version = "0.1.0"
edition = "2021"
description = "A beautiful multi-source music player built with Rust and Tauri"
license = "GPL-2.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "api-all",
    "global-shortcut-all",
    "system-tray",
    "notification-all",
    "fs-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# 网络请求
reqwest = { version = "0.11", features = ["json", "stream"] }

# 音频处理
rodio = "0.17"
symphonia = { version = "0.5", features = ["all"] }
lofty = "0.18"

# 数据库
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }

# 文件监听
notify = "6.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
log = "0.4"
env_logger = "0.10"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 配置管理
config = "0.13"
dirs = "5.0"

# 工具
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
walkdir = "2.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]