[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies.tauri-build]
version = "2.2.0"
features = []

[dependencies]
aws-lc-sys = { version = "0.30.0", features = ["bindgen"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rustls = { version = "0.23.27", features = ["ring"] }
ring = { version = "0.17", features = ["std"] }
futures = { default-features = false, version = "0.3.31" }
tauri = { version = "2.7.0", features = ["protocol-asset"] }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-fs = { version = "2" }
tauri-plugin-opener = { version = "2" }
tauri-plugin-os = { version = "2" }
tauri-plugin-shell = { version = "2" }
tauri-plugin-log = "2"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-file-scanner = { path = "../lib/tauri-plugin-file-scanner" }
tauri-plugin-audioplayer = { path = "../lib/tauri-plugin-audioplayer" }
tauri-plugin-self-update = { path = "../lib/tauri-plugin-self-update" }
tracing-appender = "0.2.3"
tracing = { default-features = false, version = "0.1.41" }
tracing-subscriber = { features = [
    "ansi",
    "env-filter",
], default-features = false, version = "0.3.19" }
database = { path = "../crates/database" }
types = { path = "../crates/types" }
file_scanner = { path = "../crates/file_scanner" }
tauri-invoke-proc = { path = "../crates/tauri-invoke-proc" }
settings = { path = "../crates/settings" }
providers = { path = "../crates/providers" }
macros = { path = "../crates/macros" }
mpris = { path = "../crates/mpris" }
audio-player = { path = "../crates/audio-player" }
notify = "8.0.0"
regex = "1.11.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
reqwest = { default-features = false, version = "0.12.20" }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
crossbeam-channel = "0.5.8"
num_cpus = "1.17.0"
