[package]
name = "audio-player"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
rodio = { version = "0.19", features = ["mp3", "wav", "vorbis", "flac"] }
symphonia = { version = "0.5", features = ["all"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
futures-util = "0.3"
rand = "0.8"

# Internal dependencies
types = { path = "../types" }

# Optional dependencies for specific platforms
rspotify = { version = "0.14", optional = true }
librespot = { version = "0.5", optional = true }

[features]
default = ["streaming"]
streaming = []
spotify = ["dep:rspotify", "dep:librespot"]
all = ["streaming", "spotify"]