[package]
name = "audio-player"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = { git = "https://github.com/RustAudio/rodio", default-features = false, features = [
    "symphonia-all",
    "playback",
] }
types = { path = "../types", default-features = false, features = ["db"] }
stream-download = "0.21.1"
tracing = { version = "0.1.41", default-features = false }
futures = "0.3.31"
tokio = {version = "1.45.1", features = ["rt-multi-thread"]}
hls_client = { version = "1.1.0", default-features = false, features = ["stream_download", "reqwest-rustls", "tracing"] }
crossbeam-channel = "0.5"
serde_json = "1.0"
database = { path = "../database" }
mpris = { path = "../mpris" }
dyn-clone = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.1" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
# DASH backend decoding stack (removed)

[features]
default = []
# GStreamer backend removed
