[package]
name = "file_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substring = "1.4.5"
types = { path = "../types", default-features = false, features = ["db"] }
blake3 = { version = "1.8.2", default-features = false }
md5 = "0.7.0"
fast_image_resize = "5.1.4"
image = { version = "0.25.6" }
lazy_static = "1.5.0"
lofty = { default-features = false, version = "0.22.4" }
regex = { default-features = false, version = "1.11.1" }
threadpool = "1.8.1"
num_cpus = "1.17.0"
uuid = { version = "1.17.0", default-features = false, features = ["v4"] }
dunce = "1.0.5"
tracing = { version = "0.1.41", default-features = false }
notify = { version = "6.1.1", default-features = false, features = ["macos_fsevent"] }
tokio = { version = "1.42.0", features = ["rt", "time", "sync", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0" }
crossbeam-channel = "0.5.8"

[dev-dependencies]
tempfile = "3.13.0"
tokio-test = "0.4.4"
