[package]
name = "plugins"
version = "0.1.0"
edition = "2021"
description = "Music player plugin system and built-in plugins"
license = "MIT"
repository = ""
homepage = ""

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
semver = { version = "1.0", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
libloading = "0.8"
chrono = { version = "0.4", features = ["serde"] }
include_dir = "0.7"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
urlencoding = "2.1"
md5 = "0.7"
serde_urlencoded = "0.7"

# bilibili-api-rs dependencies
anyhow = "1.0"
im = "15.1"
log = "0.4"
regex = "1.10"
murmur3 = "0.5"

# Music player specific dependencies
types = { path = "../types", features = ["db"] } # Only for PluginState persistence
database = { path = "../database" }
music-plugin-sdk = { path = "../music-plugin-sdk" }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"
