[package]
name = "providers"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { default-features = false, version = "0.1.41" }
async-trait = "0.1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
types = { path = "../types" }
regex = "1"
