[package]
name = "types"
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Shared Rust <-> TypeScript types for the app, exported via ts-rs"

[lib]
name = "types"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
serde_json = { version = "1.0" }
serde = { version = "1", features = ["derive"] }
ts-rs = "10.1"
thiserror = "2.0.12"
tracing = { version = "0.1.41", default-features = false, features = [
    "attributes",
] }
uuid = { version = "1.17.0", default-features = false, optional = true, features = [
    "v4",
] }
bitcode = { version = "0.6.6" }
extism-convert = { version = "1.11.1", optional = true }
diesel = { version = "2.2.0", features = ["sqlite","chrono", "serde_json"], optional = true }
oauth2 = { version = "5.0", optional = true }

[features]
# Export TypeScript bindings without pulling DB
ts-rs = []
# DB related features are behind this flag
db = ["dep:diesel", "dep:oauth2"]
extensions = ["dep:extism-convert"]
extensions-core = ["dep:extism-convert", "dep:uuid"]
# Default can include both if you want full functionality in normal build
default = ["db"]

# UI-only helpers in types crate
ui = []

